--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "chart.js": "^2.7.1",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
+    "node-chartist": "^1.0.5",
     "p-iteration": "^1.1.5",
+    "patternomaly": "^1.3.0",
     "request": "^2.83.0"
   },
   "devDependencies": {
